# wcnda-sessions

./: README.md  pyproject.toml
mysql_vs_postgres/: db_comparison.ipynb  docker-compose.yml
mysql_vs_postgres/mysql-data/: mysql.sql
mysql_vs_postgres/postgres-data/: postgres.sql
